--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/a11f8b435e.js" crossorigin="anonymous" ></script>
-    <link rel="stylesheet" href="./reset.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/a11f8b435e.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./reset.css" />
     <title>Restaurant App</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav class="nav">
-            <ul class="nav-items">
-                <li class="logo"><i class="fa-solid fa-utensils fa-2x"></i> <h1 class="logo-title">DeliciousFoody </h1></li>
-                <li class="nav-link">Categories()</li>
-            </ul>
-        </nav>
+      <nav class="nav">
+        <ul class="nav-items">
+          <li class="logo">
+            <i class="fa-solid fa-utensils fa-2x"></i>
+            <h1 class="logo-title">DeliciousFoody</h1>
+          </li>
+          <li class="nav-link">Categories()</li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <div>
+      <div id="category-container"></div>
+      <!-- <div>
             <button type="submit" class="open-popup"> Comment</button>
         </div>
         <section class="popup-window">
@@ -53,26 +60,26 @@
                     </form>
                 </div>    
             </div>    
-        </section>
+        </section> -->
     </main>
     <footer>
-        <div class="footer">
-            <div class="social-links">
-                <a href="">
-                    <i class="fa fa-facebook fa-2x icon" aria-hidden="true"></i>
-                </a>
-                <a href="">
-                    <i class="fa fa-twitter fa-2x icon" aria-hidden="true"></i>
-                </a>
-                <a href="">
-                    <i class="fa fa-github fa-2x icon" aria-hidden="true"></i>
-                </a>
-                <a href="">
-                    <i class="fa fa-envelope fa-2x icon" aria-hidden="true"></i>
-                </a>
-            </div>
-            <p class="licence">&copy;Copyrights.All rights reserved</p>
+      <div class="footer">
+        <div class="social-links">
+          <a href="">
+            <i class="fa fa-facebook fa-2x icon" aria-hidden="true"></i>
+          </a>
+          <a href="">
+            <i class="fa fa-twitter fa-2x icon" aria-hidden="true"></i>
+          </a>
+          <a href="">
+            <i class="fa fa-github fa-2x icon" aria-hidden="true"></i>
+          </a>
+          <a href="">
+            <i class="fa fa-envelope fa-2x icon" aria-hidden="true"></i>
+          </a>
         </div>
+        <p class="licence">&copy;Copyrights.All rights reserved</p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
